@startuml

title __KAFFEEMASCHINE's Class Diagram__\n

  namespace Kaffeemaschine {
    class Kaffeemaschine.Auswahl {
        + Auswahl()
    }
  }
  

  namespace Kaffeemaschine {
    abstract class Kaffeemaschine.AbstractBehaelter {
        + bezeichner : String
        ~ fuellstand : double
        ~ maxFuellMenge : double
        + Behaelter()
        {abstract} + toString()
    }
  }
  

  namespace Kaffeemaschine {
    class Kaffeemaschine.BehaelterAbfall {
        + BehaelterAbfall()
        + toString()
        + wartung()
    }
  }
  

  namespace Kaffeemaschine {
    class Kaffeemaschine.BehaelterKaffee {
        + BehaelterKaffee()
        + toString()
        + wartung()
    }
  }
  

  namespace Kaffeemaschine {
    class Kaffeemaschine.BehaelterKakao {
        + BehaelterKakao()
        + toString()
        + wartung()
    }
  }
  

  namespace Kaffeemaschine {
    class Kaffeemaschine.BehaelterMilch {
        + BehaelterMilch()
        + toString()
        + wartung()
    }
  }
  

  namespace Kaffeemaschine {
    class Kaffeemaschine.BehaelterWasser {
        + BehaelterWasser()
        + toString()
        + wartung()
    }
  }
  

  namespace Kaffeemaschine {
    class Kaffeemaschine.BehaelterZucker {
        + BehaelterZucker()
        + toString()
        + wartung()
    }
  }
  

  namespace Kaffeemaschine {
    class Kaffeemaschine.Kaffeemaschine {
        {static} ~ betriebsbereit : boolean
        ~ kaffeemaschinen : Behaelter[]
        ~ sc : Scanner
        + Kaffeemaschine()
        + programmAuswahl()
        + zutatenEntnahme()
        - getraenkAusgeben()
        - pruefeFuellstand()
        - wartenAufWartung()
    }
  }
  

  namespace Kaffeemaschine {
    class Kaffeemaschine.Rezept {
        {static} + AuswahlProdukt : String[]
        {static} + getZutatenVerbrauch : double[][]
    }
  }
  

  namespace Kaffeemaschine {
    class Kaffeemaschine.StarteKaffeeMaschine {
        {static} + main()
    }
  }
  

  namespace Kaffeemaschine {
    interface Kaffeemaschine.IWartbar {
        {abstract} + wartung()
    }
  }
  

  namespace Kaffeemaschine {
    class Kaffeemaschine.ZutatenBehaelter {
        + ZutatenBehaelter()
        + toString()
        + wartung()
    }
  }
  

  Kaffeemaschine.AbstractBehaelter .up.|> Kaffeemaschine.IWartbar
  Kaffeemaschine.BehaelterAbfall .up.|> Kaffeemaschine.IWartbar
  Kaffeemaschine.BehaelterAbfall -up-|> Kaffeemaschine.AbstractBehaelter
  Kaffeemaschine.BehaelterKaffee .up.|> Kaffeemaschine.IWartbar
  Kaffeemaschine.BehaelterKaffee -up-|> Kaffeemaschine.ZutatenBehaelter
  Kaffeemaschine.BehaelterKakao .up.|> Kaffeemaschine.IWartbar
  Kaffeemaschine.BehaelterKakao -up-|> Kaffeemaschine.ZutatenBehaelter
  Kaffeemaschine.BehaelterMilch .up.|> Kaffeemaschine.IWartbar
  Kaffeemaschine.BehaelterMilch -up-|> Kaffeemaschine.ZutatenBehaelter
  Kaffeemaschine.BehaelterWasser .up.|> Kaffeemaschine.IWartbar
  Kaffeemaschine.BehaelterWasser -up-|> Kaffeemaschine.ZutatenBehaelter
  Kaffeemaschine.BehaelterZucker .up.|> Kaffeemaschine.IWartbar
  Kaffeemaschine.BehaelterZucker -up-|> Kaffeemaschine.ZutatenBehaelter
  Kaffeemaschine.ZutatenBehaelter .up.|> Kaffeemaschine.IWartbar
  Kaffeemaschine.ZutatenBehaelter -up-|> Kaffeemaschine.AbstractBehaelter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
